--- a/artist/styles.css
+++ b/artist/styles.css
@@ -333,3 +333,37 @@ background-color: aquamarine;
     height: 20%;
 
 }
+
+#ninth-box {
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#ninth-title {
+    width: 80vw;
+    height: 10vh;
+    padding-top: 2vh;
+}
+
+#ninth-box-art {
+    width: 80vw;
+    height: 80vh;
+    display: flex;
+    justify-content: space-around;
+}
+
+.ninth-box-art-sub {
+    width: 16vw;
+    height: 80vh;
+}
+
+.ninth-box-art-img {
+    width: 19vw;
+    height: 38vh;
+    background-color: forestgreen;
+}
